maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:14: error: not found: value estFacrMur
    if (getDirection()==Direction.NORTH && !estFacrMur())
                                            ^