maze.pledge.PledgeMaze.scala.code
override def run() {
 	while (!estFaceMur())
  	avance()
  while (!estSurBiscuit())
  	keepHandOnSideWall()
  prendBiscuit()
}

def keepHandOnSideWall() {
  gauche()
  if (estFaceMur()) {
  	droite()
    if (getDirection()==Direction.NORTH && !estFacrMur())
      avance()
    else {
      if (estFaceMur())
        droite()
      else
        avance()
    }
  }
  else {
    droite()
    if (estFaceMur())
    	droite()
    else
      gauche()
  	avance()
  }
}